Use a new SpeechRecognizer weak ptr for a new speech recognition session

Previously, SROnIO has a weak ptr to SR and never update it. This becomes
a problem whenever SpeechRecognizer::Stop is called. All existing weak ptr
became invalid after the call (including the one that SROnIO has). So if
we call SpeechRecognizer::Start again. SROnIO won't call back to SR due to
invalid weak ptr.

This patch passes a new SR weak ptr in the SpeechRecognizerOnIO::Start
function. So that SROnIO don't try to use invalid weak ptr.

Bug: 777982
Change-Id: I8ce26d38105f2d76d5d0575edeb382612b13844e
Reviewed-on: https://chromium-review.googlesource.com/736239
Commit-Queue: Biao She <bshe@chromium.org>
Reviewed-by: Ian Vollick <vollick@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511298}
Former-commit-id: 346df7a1910034e3cfe0c633cc54d9f10f420fd7